--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -871,6 +871,11 @@ section {
   background: #ebebff;
 }
 
+.features .icon-box h3 a .sub-head{
+	font-size: 12px;
+    margin-top: 10px;
+}
+
 /*--------------------------------------------------------------
 # Counts
 --------------------------------------------------------------*/
