--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -620,7 +620,7 @@ section {
   margin: 0;
   font-size: 36px;
   font-weight: 700;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-family: "Poppins", sans-serif;
   color: #010483;
 }
